Fixed some TerminalBuffer tests that were not passing.